added ingridients and steps in recipes page

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,27 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homemade Lasagna Recipes</title>
   </head>
+
   <body>
-    <h1>Homemade Lasagna Recipes</h1>
-    <img
-      src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F10%2F31%2FHomemade-Lasagna-lutzflcat-1x1-1-2000.jpg&q=60&c=sc&orient=true&poi=auto&h=512"
-      height="350"
-      width="500"
-      alt="picture of a homemade lasagna"
-    />
-    <h1>Description</h1>
-    <p>
-      Lasagna is a rich and creamy whole-wheat pasta dish filled layer by layer
-      with refreshingly fresh onions and garlic, lathered in a succulent sauce
-      and topped with imported, premium quality mozzarella
-    </p>
-    <p>
-      Homemade lasagna isn't as hard to make as it seems. Don't be intimidated
-      by all the layers of delicious Italian flavor — try this homemade lasagna
-      recipe today!
-    </p>
-    <div>
-      <h1>Homemade Lasagna Ingridients</h1>
+    <div class="title">
+      <h1>Homemade Lasagna Recipes</h1>
+      <img
+        src="https://static01.nyt.com/images/2023/08/31/multimedia/RS-Lasagna-hkjl/RS-Lasagna-hkjl-superJumbo.jpg"
+        height="350"
+        width="450"
+        alt="picture of a homemade lasagna"
+      />
+    </div>
+    <div class="description">
+      <h1>Description</h1>
+      <p>
+        Lasagna is a rich and creamy whole-wheat pasta dish filled layer by
+        layer with refreshingly fresh onions and garlic, lathered in a succulent
+        sauce and topped with imported, premium quality mozzarella
+      </p>
+      <p>
+        Homemade lasagna isn't as hard to make as it seems. Don't be intimidated
+        by all the layers of delicious Italian flavor — try this homemade
+        lasagna recipe today!
+      </p>
+    </div>
+
+    <div class="ingridients">
+      <h1>Ingridients</h1>
       <p>
         Homemade lasagna isn't as hard to make as it seems. Don't be intimidated
         by all the layers of delicious Italian flavor — try this homemade
@@ -72,7 +78,7 @@
         </li>
       </ul>
     </div>
-    <div>
+    <div class="steps">
       <h1>Steps</h1>
       <ol>
         <li>
