--- a/recipes/macncheese.html
+++ b/recipes/macncheese.html
@@ -3,9 +3,78 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mac `n' Cheese Recipes</title>
+    <title>Homemade Mac `n' Cheese Recipes</title>
   </head>
   <body>
-    <h1>Mac `n' Cheese Recipes</h1>
+    <div class="title">
+      <h1>Homemade Mac `n' Cheese Recipes</h1>
+      <img
+        src="https://www.southernliving.com/thmb/9hYMYfZY2XWB7NCcFLOMZmLVh4Q=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/Best-Ever-MacaroniCheese-4x3-0282_preview_scale_100_ppi_150_quality_100-74d18d81a72644fcb7eb274bbe72eac3.jpg"
+        width="500"
+        height="350"
+        alt="cheesy and creamy mac and cheese"
+      />
+    </div>
+    <div class="description">
+      <h1>Description</h1>
+      <p>
+        This mac and cheese recipe with a buttered bread crumb topping is creamy
+        and comforting. It's easy to make the cheese sauce from scratch on your
+        stovetop, starting with a roux and adding milk, Cheddar, and Parmesan,
+        resulting in a rich, decadent sauce that coats every nook and cranny of
+        the noodles.
+      </p>
+    </div>
+    <div class="ingridients">
+      <h1>Ingridients</h1>
+      <p>
+        These are the ingredients you'll need to make the best homemade mac and
+        cheese of your life:
+      </p>
+      <ul>
+        <li>
+          <strong>Macaroni</strong>: This homemade mac and cheese starts with a
+          box of uncooked macaroni noodles.
+        </li>
+        <li>
+          <strong>Butter and flour</strong>: You'll need butter and flour to
+          make a roux for the cheese sauce. You'll also need two tablespoons of
+          butter for the topping.
+        </li>
+        <li>
+          <strong>Milk</strong>: Use whole milk for the richest flavor and
+          texture.
+        </li>
+        <li>
+          <strong>Cheese</strong>: This baked mac and cheese recipe calls for
+          Cheddar and Parmesan cheeses.
+        </li>
+        <li>
+          <strong>Seasonings</strong>: Salt and pepper goes into the sauce,
+          while paprika is sprinkled over the topping.
+        </li>
+        <li>
+          <strong>Bread crumbs</strong>: Use store-bought dried bread crumbs or
+          make your own at home.
+        </li>
+      </ul>
+    </div>
+
+    <div class="steps">
+      <h1>Steps</h1>
+      <ol>
+        <li>
+          Boil the noodles, drain, and transfer to a prepared baking dish.
+        </li>
+        <li>
+          Make the cheese sauce, pour the sauce over the noodles, and stir.
+        </li>
+        <li>
+          Make the topping, spread it over macaroni and cheese, and sprinkle
+          with paprika.
+        </li>
+        <li>Bake the mac and cheese until the topping is golden brown.</li>
+      </ol>
+    </div>
   </body>
 </html>
