--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Odin Recipes</title>
+    <title>Homemade Recipes</title>
   </head>
 
   <body>
-    <h1>Odin Recipes</h1>
+    <h1>Homemade Recipes</h1>
     <img
       src="https://images.bauerhosting.com/legacy/empire-tmdb/films/2062/images/sFpGI08aeHIRKlLi9SxLyYrRyZ8.jpg?ar=16%3A9&fit=crop&crop=top&auto=format&w=1440&q=80"
       height="250"
@@ -14,11 +14,15 @@
       alt="ratatouille"
     />
     <ul>
-      <li><a href="recipes/lasagna.html">Lasagna Recipes</a></li>
+      <li><a href="recipes/lasagna.html">Homemade Lasagna Recipes</a></li>
       <li>
-        <a href="recipes/roasted-chicken.html">Roasted Chicken Recipes</a>
+        <a href="recipes/roasted-chicken.html"
+          >Homemade Roasted Chicken Recipes</a
+        >
       </li>
-      <li><a href="recipes/macncheese.html">Mac `n' Cheese Recipes</a></li>
+      <li>
+        <a href="recipes/macncheese.html">Homemade Mac `n' Cheese Recipes</a>
+      </li>
     </ul>
   </body>
 </html>
