--- a/recipes/roasted-chicken.html
+++ b/recipes/roasted-chicken.html
@@ -6,6 +6,57 @@
     <title>Roasted Chicken Recipes</title>
   </head>
   <body>
-    <h1>Roasted Chicken Recipes</h1>
+    <div class="title">
+      <h1>Roasted Chicken Recipes</h1>
+      <img
+        src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F01%2F19%2F83557-juicy-roast-chicken-mfs495-1.jpg&q=60&c=sc&orient=true&poi=auto&h=512"
+        width="500"
+        height="400"
+        alt="Roasted chicken"
+      />
+    </div>
+
+    <div class="description">
+      <h1>Description</h1>
+      <p>
+        Savor the perfection of Roasted Chicken — a culinary masterpiece of
+        golden crispiness and juicy tenderness. Roasted chicken never fails to
+        impress, but it's surprisingly simple to make!
+      </p>
+    </div>
+
+    <div class="ingridients">
+      <h1>Ingridients</h1>
+      <ul>
+        <li>
+          <strong>Chicken</strong>: This recipe starts with a 3-pound whole
+          chicken. If your bird is larger or smaller, you'll need to adjust the
+          recipe.
+        </li>
+        <li>
+          <strong>Seasonings</strong>: This roasted chicken is simply seasoned
+          with salt, black pepper, and onion powder.
+        </li>
+        <li>
+          <strong>Butter</strong>: Butter locks in moisture and gives the
+          seasonings something to adhere to.
+        </li>
+        <li>
+          <strong>Celery</strong>: Stuff the chicken cavity with celery for
+          subtle vegetal flavor. Plus, the celery will release even more
+          moisture as the chicken cooks.
+        </li>
+      </ul>
+    </div>
+
+    <div class="steps">
+      <h1>Steps</h1>
+      <ol>
+        <li>Season the chicken inside and out.</li>
+        <li>Add the butter to the chicken and the pan.</li>
+        <li>Stuff the cavity with celery.</li>
+        <li>Bake until the chicken is fully roasted.</li>
+      </ol>
+    </div>
   </body>
 </html>
